<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@drawable/navbar_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navbar" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="match_parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="Daily Lines"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/inter"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textAlignment="textEnd"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:fontFamily="@font/inter"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <!--TODO connect to actual days -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/monMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/neutral_mood_icon" />

                <TextView
                    android:id="@+id/monDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tuesMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/best_mood_icon" />

                <TextView
                    android:id="@+id/tuesDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/wedMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/good_mood_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/wedDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="20"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thuMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/good_mood_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/thuDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="21"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/friMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/good_mood_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/friDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="22"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/satMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/good_mood_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/satDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="23"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/sunMood"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/good_mood_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/sunDay"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/inter"
                    android:text="24"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </FrameLayout>


        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="-5dp"
            android:fontFamily="@font/inter"
            android:text="Today I'm Feeling..."
            android:textAlignment="center"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_border"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageButton
                android:id="@+id/worseMood"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_selector"
                android:onClick="onMoodButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/worst_mood_icon"
                android:tag="worst_mood" />

            <ImageButton
                android:id="@+id/badMood"
                android:layout_width="26dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_selector"
                android:onClick="onMoodButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/bad_mood_icon"
                android:tag="bad_mood" />

            <ImageButton
                android:id="@+id/neutralMood"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_selector"
                android:onClick="onMoodButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/neutral_mood_icon"
                android:tag="neutral_mood" />

            <ImageButton
                android:id="@+id/goodMood"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_selector"
                android:onClick="onMoodButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/good_mood_icon"
                android:tag="good_mood" />

            <ImageButton
                android:id="@+id/bestMood"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector"
                android:onClick="onMoodButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/best_mood_icon"
                android:tag="best_mood" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-5dp"
            android:fontFamily="@font/inter"
            android:text="Daily Reflection"
            android:textAlignment="center"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/submitEntryButton"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:background="@drawable/filled_rounded_border"
                android:text="Start Writing"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>